Resolve duplicate functionality TripController & DestinationController
We had duplicate endpoints in both of these. Moved all destination endpoints into the destinationcontroller to resolve.

close #136